--- a/myApp/views/index.ejs
+++ b/myApp/views/index.ejs
@@ -38,7 +38,7 @@
           <div class="card-conteudo">
             <h3><%= lista[0].name %></h3>
             <p><%= lista[0].description %></p>
-            <p><%= lista[0].price %></p>
+            <p>R$<%= lista[0].price %>,00</p>
           </div>
         </div>
         <div class="grade-item">
@@ -50,7 +50,7 @@
           <div class="card-conteudo">
             <h3><%= lista[1].name %></h3>
             <p><%= lista[1].description %></p>
-            <p><%= lista[1].price %></p>
+            <p>R$<%= lista[1].price %>,00</p>
           </div>
         </div>
         <div class="grade-item">
@@ -62,7 +62,7 @@
           <div class="card-conteudo">
             <h3><%= lista[2].name %></h3>
             <p><%= lista[2].description %></p>
-            <p><%= lista[2].price %></p>
+            <p>R$<%= lista[2].price %>,00</p>
           </div>
         </div>
       </div>
@@ -73,25 +73,33 @@
         <div class="containers">
           <div class="logo-config">
             <img
-              class="logo-menu"
+              class="logo-footer"
               src="images/logodt3.png"
               alt="Logo da Pagina"
             />
+            <p><strong>Contato</strong></p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>
+              Rua Lauro Müller, 116 - Botafogo, Rio de Janeiro - RJ, 22290-160
+            </p>
           </div>
 
           <div class="segundo">
             <nav class="conteudo">
               <ul>
+                <strong>Informações</strong>
                 <li><a href="#">AJUDA</a></li>
                 <li><a href="#">TERMO DE USO</a></li>
                 <li><a href="#">POLÍTICA DE PRIVACIDADE</a></li>
                 <li><a href="#">ACEITE</a></li>
+                <li><a href="#">NEWS LETTER</a></li>
+                <li><a href="#">PROMOÇÕES</a></li>
               </ul>
             </nav>
           </div>
           <div class="terceiro">
             <ul>
+              <strong>Outros Links</strong>
               <li>Link 1</li>
               <li>Link 2</li>
               <li>Link 3</li>
