--- a/myApp/public/stylesheets/index.css
+++ b/myApp/public/stylesheets/index.css
@@ -107,9 +107,9 @@ header ul li {
 .config img {
   margin-top: 25px;
 }
-.segundo {
-  /*  */
-}
+/* .segundo {
+
+} */
 
 .rodape {
   display: flex;
