--- a/myApp/views/index.ejs
+++ b/myApp/views/index.ejs
@@ -23,8 +23,6 @@
           <li><a href="#"> Empresa </a></li>
         </ul>
       </nav>
-      <!-- <h1><%= title %></h1>
-      <p>Bem vindo a página da loja <%= title %>!</p> -->
     </header>
 
     <main>
@@ -36,9 +34,9 @@
             alt="cadeira spider"
           />
           <div class="card-conteudo">
-            <h3><%= lista[0].name %></h3>
-            <p><%= lista[0].description %></p>
-            <p>R$<%= lista[0].price %>,00</p>
+            <h3><%= produto1.name %></h3>
+            <p><%= produto1.description %></p>
+            <p>R$<%= produto1.price %>,00</p>
           </div>
         </div>
         <div class="grade-item">
@@ -48,9 +46,9 @@
             alt="cadeira GTI red"
           />
           <div class="card-conteudo">
-            <h3><%= lista[1].name %></h3>
-            <p><%= lista[1].description %></p>
-            <p>R$<%= lista[1].price %>,00</p>
+            <h3><%= produto2.name %></h3>
+            <p><%= produto2.description %></p>
+            <p>R$<%= produto2.price %>,00</p>
           </div>
         </div>
         <div class="grade-item">
@@ -60,9 +58,9 @@
             alt="cadeira GTX red"
           />
           <div class="card-conteudo">
-            <h3><%= lista[2].name %></h3>
-            <p><%= lista[2].description %></p>
-            <p>R$<%= lista[2].price %>,00</p>
+            <h3><%= produto3.name %></h3>
+            <p><%= produto3.description %></p>
+            <p>R$<%= produto3.price %>,00</p>
           </div>
         </div>
       </div>
