--- a/myApp/views/index.ejs
+++ b/myApp/views/index.ejs
@@ -36,7 +36,7 @@
           <div class="card-conteudo">
             <h3><%= produto1.name %></h3>
             <p><%= produto1.description %></p>
-            <p>R$<%= produto1.price %>,00</p>
+            <p><em>R$<%= produto1.price %>,00</em></p>
           </div>
         </div>
         <div class="grade-item">
@@ -48,7 +48,7 @@
           <div class="card-conteudo">
             <h3><%= produto2.name %></h3>
             <p><%= produto2.description %></p>
-            <p>R$<%= produto2.price %>,00</p>
+            <p><em>R$<%= produto2.price %>,00</em></p>
           </div>
         </div>
         <div class="grade-item">
@@ -60,7 +60,7 @@
           <div class="card-conteudo">
             <h3><%= produto3.name %></h3>
             <p><%= produto3.description %></p>
-            <p>R$<%= produto3.price %>,00</p>
+            <p><em>R$<%= produto3.price %>,00</em></p>
           </div>
         </div>
       </div>
